--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,6 @@
     font-family: "Noto Sans Mono SemiBold", sans-serif;
     color: #BC958E;
     transition: background-color .5s;
-    box-shadow: none;
     font-weight: bolder;
 }
 
@@ -13,31 +12,34 @@
 .modules-left,
     /*.modules-center,*/
 .modules-right {
-    background: rgba(0, 0, 8, .85);
+    background: rgba(0, 0, 8, .75);
     margin: 5px 5px 0 5px;
-    padding: 0 5px;
-    border-radius: 20px;
-    border: 2px solid #BC958E;
+    padding: 0;
+    border-radius: 6px;
+    border: 1px solid #BC958E;
 }
 
-label.module, #workspaces button {
+label.module, button {
     padding: 0 10px;
-    margin: 5px 0;
-    border-radius: 20px;
+    margin: 0;
+    border-radius: 0;
     border: none;
     box-shadow: none;
 }
 
-label.module:hover, #workspaces button:hover {
+label.module:hover, button:hover {
     background: rgba(128, 128, 128, .75);
+    border: none;
+    box-shadow: none;
+    text-decoration: none;
 }
 
 menu {
-    border-radius: 15px;
+    border-radius: 6px;
     background: rgba(0, 0, 8, 1);
     color: #BC958E;
 }
 
 menuitem {
-    border-radius: 15px;
+    border-radius: 6px;
 }
