--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -15,7 +15,7 @@
     background: rgba(0, 0, 8, .75);
     margin: 5px 5px 0 5px;
     padding: 0;
-    border-radius: 6px;
+    border-radius: 5px;
     border: 1px solid #BC958E;
 }
 
@@ -35,11 +35,14 @@ label.module:hover, button:hover {
 }
 
 menu {
-    border-radius: 6px;
+    border-radius: 5px;
     background: rgba(0, 0, 8, 1);
     color: #BC958E;
 }
 
-menuitem {
-    border-radius: 6px;
+menuitem:hover {
+    background: rgba(128, 128, 128, .75);
+    border: none;
+    box-shadow: none;
+    text-decoration: none;
 }
