--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,48 +1,66 @@
 * {
     font-family: "Noto Sans Mono SemiBold", sans-serif;
-    color: #BC958E;
     transition: background-color .5s;
-    font-weight: bolder;
 }
 
 #waybar {
-    background: transparent;
+    background: rgba(10, 10, 10, 0.9);
+    padding: 0 2px;
 }
 
 .modules-left,
-    /*.modules-center,*/
+.modules-center,
 .modules-right {
-    background: rgba(0, 0, 8, .75);
-    margin: 2px 2px 0 2px;
+    background: none;
+    /*margin: 2px 2px 0 2px;*/
+    margin: 0;
     padding: 0;
     border-radius: 5px;
-    border: 1px solid #BC958E;
+    border: none;
+    color: #BC958E;
 }
 
-label.module, button {
-    padding: 5px 10px;
+label.module, button, #tray {
+    padding: 5px 8px;
     margin: 0;
     border-radius: 0;
     border: none;
     box-shadow: none;
-}
-
-label.module:hover, button:hover {
-    background: rgba(128, 128, 128, .75);
-    border: none;
-    box-shadow: none;
-    text-decoration: none;
-}
-
-menu {
-    border-radius: 5px;
-    background: rgba(0, 0, 8, 1);
+    font-weight: bolder;
     color: #BC958E;
 }
 
-menuitem:hover {
-    background: rgba(128, 128, 128, .75);
+label.module:hover, button:hover, #tray:hover {
+    background: rgba(128, 128, 128, .25);
     border: none;
     box-shadow: none;
     text-decoration: none;
+}
+
+button.active {
+    font-weight: normal;
+    color: #BC958E;
+}
+
+#custom-power,
+#network.disconnected,
+button.urgent {
+    font-weight: bold;
+    color: #FF8B94;
+}
+
+#bluetooth.disabled,
+#network.disabled {
+    opacity: 0.5;
+    color: #A0A4B0;
+}
+
+#bluetooth.disabled,
+#network.disabled {
+    opacity: 0.5;
+    color: #A0A4B0;
+}
+
+#network.linked, #network.ethernet {
+    color: #A3E4B5;
 }
